Add renderer registration and per-element renderer APIs (#695)
* Add renderer registration and per-element render API

--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj
@@ -115,16 +115,36 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="lib\AdaptiveActionParserRegistration.h" />
+
+    <ClInclude Include="lib\AdaptiveActionRendererRegistration.h" />
     <ClInclude Include="lib\AdaptiveActionsConfig.h" />
+    <ClInclude Include="lib\AdaptiveChoiceSetInputRenderer.h" />
+    <ClInclude Include="lib\AdaptiveColumnRenderer.h" />
+    <ClInclude Include="lib\AdaptiveColumnSetRenderer.h" />
+    <ClInclude Include="lib\AdaptiveContainerRenderer.h" />
     <ClInclude Include="lib\AdaptiveContainerStyleDefinition.h" />
     <ClInclude Include="lib\AdaptiveContainerStylesDefinition.h" />
     <ClInclude Include="lib\AdaptiveElementParserRegistration.h" />
+    <ClInclude Include="lib\AdaptiveDateInputRenderer.h" />
+    <ClInclude Include="lib\AdaptiveElementRendererRegistration.h" />
+    <ClInclude Include="lib\AdaptiveFactSetRenderer.h" />
     <ClInclude Include="lib\AdaptiveFontSizesConfig.h" />
     <ClInclude Include="lib\AdaptiveFontWeightsConfig.h" />
     <ClInclude Include="lib\AdaptiveImageConfig.h" />
+    <ClInclude Include="lib\AdaptiveImageRenderer.h" />
+    <ClInclude Include="lib\AdaptiveImageSetRenderer.h" />
     <ClInclude Include="lib\AdaptiveImageSizesConfig.h" />
     <ClInclude Include="lib\AdaptiveInputs.h" />
+    <ClInclude Include="lib\AdaptiveNumberInputRenderer.h" />
+    <ClInclude Include="lib\AdaptiveOpenUrlActionRenderer.h" />
+    <ClInclude Include="lib\AdaptiveRenderContext.h" />
     <ClInclude Include="lib\AdaptiveSeparator.h" />
+    <ClInclude Include="lib\AdaptiveShowCardActionRenderer.h" />
+    <ClInclude Include="lib\AdaptiveSubmitActionRenderer.h" />
+    <ClInclude Include="lib\AdaptiveTextBlockRenderer.h" />
+    <ClInclude Include="lib\AdaptiveTextInputRenderer.h" />
+    <ClInclude Include="lib\AdaptiveTimeInputRenderer.h" />
+    <ClInclude Include="lib\AdaptiveToggleInputRenderer.h" />
     <ClInclude Include="lib\RenderedAdaptiveCard.h" />
     <ClInclude Include="lib\AdaptiveSeparatorConfig.h" />
     <ClInclude Include="lib\AdaptiveShowCardActionConfig.h" />
@@ -171,16 +191,35 @@
     <ClInclude Include="lib\XamlCardResourceResolvers.h" />
     <ClInclude Include="lib\XamlCardRendererComponent.h" />
     <ClCompile Include="lib\AdaptiveActionParserRegistration.cpp" />
+    <ClCompile Include="lib\AdaptiveActionRendererRegistration.cpp" />
     <ClCompile Include="lib\AdaptiveActionsConfig.cpp" />
+    <ClCompile Include="lib\AdaptiveChoiceSetInputRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveColumnRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveColumnSetRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveContainerRenderer.cpp" />
     <ClCompile Include="lib\AdaptiveContainerStyleDefinition.cpp" />
     <ClCompile Include="lib\AdaptiveContainerStylesDefinition.cpp" />
     <ClCompile Include="lib\AdaptiveElementParserRegistration.cpp" />
+    <ClCompile Include="lib\AdaptiveDateInputRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveElementRendererRegistration.cpp" />
+    <ClCompile Include="lib\AdaptiveFactSetRenderer.cpp" />
     <ClCompile Include="lib\AdaptiveFontSizesConfig.cpp" />
     <ClCompile Include="lib\AdaptiveFontWeightsConfig.cpp" />
     <ClCompile Include="lib\AdaptiveImageConfig.cpp" />
+    <ClCompile Include="lib\AdaptiveImageRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveImageSetRenderer.cpp" />
     <ClCompile Include="lib\AdaptiveImageSizesConfig.cpp" />
     <ClCompile Include="lib\AdaptiveInputs.cpp" />
+    <ClCompile Include="lib\AdaptiveNumberInputRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveOpenUrlActionRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveRenderContext.cpp" />
     <ClCompile Include="lib\AdaptiveSeparator.cpp" />
+    <ClCompile Include="lib\AdaptiveShowCardActionRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveSubmitActionRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveTextBlockRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveTextInputRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveTimeInputRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveToggleInputRenderer.cpp" />
     <ClCompile Include="lib\RenderedAdaptiveCard.cpp" />
     <ClCompile Include="lib\AdaptiveSeparatorConfig.cpp" />
     <ClCompile Include="lib\AdaptiveShowCardActionConfig.cpp" />
