--- a/source/dotnet/Test/AdaptiveCards.Test/AdaptiveCards.Test.csproj
+++ b/source/dotnet/Test/AdaptiveCards.Test/AdaptiveCards.Test.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AdaptiveCardApiTests.cs" />
+    <Compile Include="HostConfigApiTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
