--- a/source/uwp/Visualizer/HostConfigs/DefaultHostConfig.json
+++ b/source/uwp/Visualizer/HostConfigs/DefaultHostConfig.json
@@ -9,7 +9,7 @@
   },
   "separator": {
     "lineThickness": 1,
-    "lineColor": "#EEEEEE"
+    "lineColor": "#66000000"
   },
   "supportsInteractivity": true,
   "fontFamily": "Segoe UI",
