--- a/source/uwp/AdaptiveCardTestApp/AdaptiveCardTestApp.csproj
+++ b/source/uwp/AdaptiveCardTestApp/AdaptiveCardTestApp.csproj
@@ -96,6 +96,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Helpers\BindableBase.cs" />
+    <Compile Include="Model\StoredTestResultInfo.cs" />
     <Compile Include="Pages\BasePage.cs" />
     <Compile Include="Pages\RunningTestsPage.xaml.cs">
       <DependentUpon>RunningTestsPage.xaml</DependentUpon>
@@ -167,6 +168,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>10.0.3</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
