Add support for verticalContentAlignment in containers (#797)
* Some minor fixes, and introduce actionStyle
It is now possible to explicitly select the button style ("link" or "button") in ActionSet elements and on the card itself.

* Fix ChoiceSetInput.value throwing in unrendered ShowCardAction cards

* Add a way to pre-expand a single ShowCardAction

* New spacing model
Removes separation and introduces spacing/separator
See issue https://github.com/Microsoft/AdaptiveCards/issues/462

* Small fix for Image (make size "auto" by default)
Some cleanup

* Add backward compat for "separation" and "Column.size"
To make things easier, the renderer will for now accept both the old "separation" and new "spacing" as well as the old "Column.size" and new "Column.width". When the old properties are used, the visualizer will display an error indicating that the property has been deprecated and will be removed.

* Allow Container.backgroundImage as a simple string
This makes it easier to specify a stretching background image and ensures backward compatibility with the previous model

* Remove TextColor.dark and TextColor.light, add TextColor.default

* Fix image sizing logic for auto and stretch
Fix background container color being applied when it shouldn't

* Remove inlineEdgeToEdge action mode. "inline" is enough.

* Change "normal" enum values into "default" and add parse warnings

* Fix Input.Toggle valueOn and valueOff parsing

* Remove preExpandSingleShowCardAction option from HostConfig

* Add Outlook host container
Remove support for "link buttons" style

* Fix incorrect height of ChoiceSet input

* Fix selectAction not working on ColumnSet

* Fix ActionSet not honoring horizontalAlignment (overrides HostConfig is specified)

* Support explicit orientation on ActionSet

* Remove comments

* Support for explicit orientation in ActionSet - cleanup

* Add support for verticalContentAlignment in containers

--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,7 @@ product.pbxproj
 #Generated header from MIDL
 **/UWP/Renderer/AdaptiveCards.Uwp.h
 *.binlog
+source/nodejs/adaptivecards-visualizer/built/visualizer-with-renderer.js
+source/nodejs/adaptivecards-visualizer/built/visualizer-with-renderer.js
+source/nodejs/adaptivecards/built/card-elements.js
+source/nodejs/adaptivecards/built/card-elements.js.map
