--- a/source/xamarin/AdaptiveCards.Rendering.Xamarin/AdaptiveCards.Rendering.Xamarin.Android.Sample/AdaptiveCards.Rendering.Xamarin.Android.Sample.csproj
+++ b/source/xamarin/AdaptiveCards.Rendering.Xamarin/AdaptiveCards.Rendering.Xamarin.Android.Sample/AdaptiveCards.Rendering.Xamarin.Android.Sample.csproj
@@ -71,6 +71,7 @@
     <Reference Include="Xamarin.Android.Support.v7.AppCompat">
       <HintPath>..\packages\Xamarin.Android.Support.v7.AppCompat.25.3.1\lib\MonoAndroid70\Xamarin.Android.Support.v7.AppCompat.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
