--- a/source/xamarin/AdaptiveCards.Rendering.Xamarin.Android/AdaptiveCards.Rendering.Xamarin.Android.csproj
+++ b/source/xamarin/AdaptiveCards.Rendering.Xamarin.Android/AdaptiveCards.Rendering.Xamarin.Android.csproj
@@ -82,7 +82,7 @@
     <TransformFile Include="Transforms\Metadata.xml" />
   </ItemGroup>
   <ItemGroup>
-    <LibraryProjectZip Include="..\..\..\android\adaptivecards\build\outputs\aar\adaptivecards-debug.aar">
+    <LibraryProjectZip Include="..\..\android\adaptivecards\build\outputs\aar\adaptivecards-debug.aar">
       <Link>Jars\adaptivecards-debug.aar</Link>
     </LibraryProjectZip>
   </ItemGroup>
