Xamarin iOS complete

--- a/source/Xamarin.AdaptiveCards.iOS/Xamarin.AdaptiveCards.iOS/Xamarin.AdaptiveCards.iOS.csproj
+++ b/source/Xamarin.AdaptiveCards.iOS/Xamarin.AdaptiveCards.iOS/Xamarin.AdaptiveCards.iOS.csproj
@@ -33,9 +33,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="libAdaptiveCards.linkwith.cs">
-      <DependentUpon>libAdaptiveCards.a</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
@@ -44,7 +41,10 @@
     <ObjcBindingCoreSource Include="Structs.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ObjcBindingNativeLibrary Include="libAdaptiveCards.a" />
+    <NativeReference Include="..\..\ios\AdaptiveCards\AdaptiveCards\AdaptiveCards.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>False</SmartLink>
+    </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
