--- a/source/xamarin/AdaptiveCards.Rendering.Xamarin.iOS/AdaptiveCards.Rendering.Xamarin.iOS.csproj
+++ b/source/xamarin/AdaptiveCards.Rendering.Xamarin.iOS/AdaptiveCards.Rendering.Xamarin.iOS.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{DC69056C-24E0-4AD1-82A6-6F1DEB2AE70E}</ProjectGuid>
     <ProjectTypeGuids>{8FFB629D-F513-41CE-95D2-7ECE97B6EEEC};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
-    <RootNamespace>Xamarin.AdaptiveCards.iOS</RootNamespace>
-    <AssemblyName>Xamarin.AdaptiveCards.iOS</AssemblyName>
+    <RootNamespace>AdaptiveCards.Rendering.Xamarin.iOS</RootNamespace>
+    <AssemblyName>AdaptiveCards.Rendering.Xamarin.iOS</AssemblyName>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
