.net serialization and html renderer fixes
1. HTML renderer uses <label for /> on radios/checkboxes
2. Fixed version parsing issues

--- a/source/dotnet/Test/AdaptiveCards.Test/AdaptiveCards.Test.csproj
+++ b/source/dotnet/Test/AdaptiveCards.Test/AdaptiveCards.Test.csproj
@@ -48,10 +48,12 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdaptiveSchemaVersionTests.cs" />
+    <Compile Include="ChoiceSetInputTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AdaptiveCardApiTests.cs" />
     <Compile Include="HostConfigApiTests.cs" />
-    <Compile Include="AdaptiveCardSeparatorSpacingTests.cs" />
+    <Compile Include="SeparatorSpacingTests.cs" />
     <Compile Include="SerializationTests.cs" />
   </ItemGroup>
   <ItemGroup>
