added warnings support to .NET Html renderer, cleaned up html sample app

--- a/source/dotnet/Samples/AdaptiveCards.Sample.Html/Properties/launchSettings.json
+++ b/source/dotnet/Samples/AdaptiveCards.Sample.Html/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "AdaptiveCards.Sample.Html": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "-r -i -o PayloadOutput.html"
     }
   }
 }
