Added .NET error/warning results to parsing/rendering (#891)
* fixed showcard deserialization, refactored WPF action rendering

- also relaxed container style deserialization for better back compat

* html fixes

1.	All action <button>’s have a CSS class to apply the client side logic. Recommend we standardize the name from ac-openUrlAction to => ac-action-openUrl, ac-action-showCard, and ac-action-submit (this is what we already talked about)
2.	The Action.ShowCard renderer created invalid HTML, so I’ve modified the ID generation and attribute names:
a.	The CardID generation is now a random 8-digit string
b.	The CardID is assigned to the id attribute of the div rather than a random attribute (e.g., <div id=”randomCardId”>)
c.	The CardID on the associated <button> is set on a HTML5 compliant attribute: data-ac-showCardId (e.g., <button data-ac-showCardId=”randomCardId”)
3.	Radio/Checkbox Inputs were creating invalid HTML by putting a <div> inside a <label>, so I’ve removed that nesting. Everything should still look correct but please double check this.
4.	The Host Config font family was being applied at the text block level, I moved it to the card <div>
5.	TextBlock was wrapped in a div instead of a <p>. This just seemed like good cleanup, but if it breaks you let me know and I can change it back
6.	Action.OpenUrl was setting a url property on the <button>, I’ve changed it to an HTML5 compliant attribute: <button data-ac-url=”X”>

* code review fixes

* fix WPF spacing

* basic error results are in place, not set on the design yet

* comilation fix

* action title no longer required

* small tweaks

* AdaptiveTypedElement.Type is now abstract, upgraded unit test project

* errors and warnings suipport in .NET

* All serialization exceptions now get thrown as AdaptiveSerializationException

1. Also changed AdaptiveInput does it doesn't hide the inherited Id property

* rename AdaptiveViolation to AdaptiveWarning

* added tests to

--- a/source/dotnet/Samples/WPFVisualizer/AdaptiveCards.Sample.WPFVisualizer.csproj
+++ b/source/dotnet/Samples/WPFVisualizer/AdaptiveCards.Sample.WPFVisualizer.csproj
@@ -106,6 +106,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CustomElements\MyCustomAction.cs" />
+    <Compile Include="CustomElements\MyCustomRating.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
