.net wpf image rendering support

--- a/source/dotnet/Samples/AdaptiveCards.Sample.ImageRender/AdaptiveCards.Sample.ImageRender.csproj
+++ b/source/dotnet/Samples/AdaptiveCards.Sample.ImageRender/AdaptiveCards.Sample.ImageRender.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="symbols\" />
+  </ItemGroup>
+
 </Project>
