trying to get sta dispatcher working

--- a/source/dotnet/Samples/AdaptiveCards.Sample.ImageRender/AdaptiveCards.Sample.ImageRender.csproj
+++ b/source/dotnet/Samples/AdaptiveCards.Sample.ImageRender/AdaptiveCards.Sample.ImageRender.csproj
@@ -15,4 +15,8 @@
     <Folder Include="symbols\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="WindowsBase" />
+  </ItemGroup>
+
 </Project>
