--- a/source/dotnet/Samples/AdaptiveCards.Sample.ImageRender/Properties/launchSettings.json
+++ b/source/dotnet/Samples/AdaptiveCards.Sample.ImageRender/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "AdaptiveCards.Sample.ImageRender": {
       "commandName": "Project",
-      "commandLineArgs": "-r -o ./"
+      "commandLineArgs": "-r  -o ./out"
     }
   }
 }
