--- a/source/dotnet/Samples/ImageRendererServer/ImageRendererServer.csproj
+++ b/source/dotnet/Samples/ImageRendererServer/ImageRendererServer.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <None Remove="wwwroot\Styles\MyStyles.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +16,16 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Library\AdaptiveCards.Rendering.Wpf\AdaptiveCards.Rendering.Wpf.csproj" />
     <ProjectReference Include="..\..\Library\AdaptiveCards\AdaptiveCards.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="PresentationFramework" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\Styles\MyStyles.xaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
