Add errors/warnings to UWP Rendering layer

--- a/source/uwp/Renderer/AdaptiveCardRenderer.vcxproj
+++ b/source/uwp/Renderer/AdaptiveCardRenderer.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="lib\AdaptiveCardGetResourceStreamArgs.h" />
     <ClInclude Include="lib\AdaptiveCardRendererComponent.h" />
     <ClInclude Include="lib\AdaptiveCardResourceResolvers.h" />
+    <ClInclude Include="lib\AdaptiveFailure.h" />
     <ClInclude Include="lib\AdaptiveHostConfigParseResult.h" />
     <ClInclude Include="lib\AdaptiveCardParseResult.h" />
     <ClInclude Include="lib\AdaptiveContainerStyleDefinition.h" />
@@ -202,6 +203,7 @@
     <ClCompile Include="lib\AdaptiveCardGetResourceStreamArgs.cpp" />
     <ClCompile Include="lib\AdaptiveCardRendererComponent.cpp" />
     <ClCompile Include="lib\AdaptiveCardResourceResolvers.cpp" />
+    <ClCompile Include="lib\AdaptiveFailure.cpp" />
     <ClCompile Include="lib\AdaptiveHostConfigParseResult.cpp" />
     <ClCompile Include="lib\AdaptiveCardParseResult.cpp" />
     <ClCompile Include="lib\AdaptiveContainerStyleDefinition.cpp" />
