--- a/source/nodejs/adaptivecards-site/package.json
+++ b/source/nodejs/adaptivecards-site/package.json
@@ -10,7 +10,7 @@
     "version": "3.4.1"
   },
   "dependencies": {
-    "adaptivecards": "^1.0.0-beta.1",
+    "adaptivecards": "^1.0.1-2",
     "change-case": "^3.0.1",
     "glob": "^7.1.2",
     "hexo": "^3.4.1",
