--- a/source/nodejs/adaptivecards-visualizer/package.json
+++ b/source/nodejs/adaptivecards-visualizer/package.json
@@ -20,13 +20,13 @@
     "@types/markdown-it": "0.0.1",
     "@types/node": "0.0.2",
     "@types/vkbeautify": "^0.99.0",
+    "adaptivecards": "^1.0.1-2",
     "ajv-cli": "1.1.1",
     "autoprefixer": "^6.7.7",
     "brace": "^0.9.1",
     "http-server": "0.9.0",
     "json-loader": "0.5.4",
     "markdown-it": "^8.2.2",
-    "adaptivecards": "^1.0.0-beta.1",
     "node-sass": "^4.5.2",
     "postcss": "^5.2.16",
     "postcss-cli": "^3.1.1",
