--- a/source/nodejs/adaptivecards-visualizer/package.json
+++ b/source/nodejs/adaptivecards-visualizer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adaptivecards-visualizer",
-  "version": "1.0.1-2",
+  "version": "1.0.1-4",
   "description": "Adaptive Card Visualizer for HTML renderer",
   "main": "dist/adaptivecards-visualizer.js",
   "private": true,
@@ -13,14 +13,16 @@
     "build-css": "postcss ./css/*.css --use autoprefixer --replace --no-map",
     "watch": "webpack --watch",
     "start": "http-server -c-1 -o",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "version": "npm run build && git add . && git commit -m 'bump version'",
+    "postversion": "git push"
   },
   "dependencies": {
     "@types/ace": "0.0.32",
     "@types/markdown-it": "0.0.1",
     "@types/node": "0.0.2",
     "@types/vkbeautify": "^0.99.0",
-    "adaptivecards": "^1.0.1-2",
+    "adaptivecards": "^1.0.1-4",
     "ajv-cli": "1.1.1",
     "autoprefixer": "^6.7.7",
     "brace": "^0.9.1",
